--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "dev:webpack": "webpack-dev-server --mode development",
-    "dev:netlify": "netlify dev",
+    "dev": "netlify dev",
     "build": "webpack --mode production",
     "lint": "eslint --fix --ext .js,.vue"
   },
@@ -45,6 +45,7 @@
   "dependencies": {
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "dotenv-webpack": "^8.0.1",
     "lodash": "^4.17.21",
     "vue": "^3.0.7",
     "vue-router": "^4.1.6",
